# scattr

./: .gitignore  HISTORY.md  README.md  init.py  pyproject.toml
scattr/: core.py
